--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,32 @@ body {
     width: 50px;
     background: red;
 }
+
+.btn-container {
+    position: absolute;
+    padding:10px;
+    bottom: 0px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.hit-btn {
+    background: rgb(40, 156, 40);
+}
+
+.stay-btn {
+    background: red;
+}
+
+.game-btn {
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    text-align: center;
+    cursor: pointer;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
