--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ body {
     position: absolute;
     color: white;
     bottom: 15px; 
+    font-weight: bold;
 }
 .card {
     height: 100px;
@@ -68,7 +69,7 @@ body {
     border-radius: 3px;
     width: 60px;
     height: 85px;
-    margin: -22px;
+    margin: -24px;
     background-size: contain;
 }
 
@@ -106,4 +107,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.hide {
+    display: none;
 }
