--- a/styles.css
+++ b/styles.css
@@ -132,12 +132,12 @@ body {
     position: absolute;
     height: 30px;
     width: 200px;
-    background-color: yellow;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: auto;
     text-align: center;
+    color: white;
 }
 
 .win {
@@ -146,4 +146,8 @@ body {
 
 .hide {
     display: none;
+}
+
+.bust {
+    border: 2px solid red;
 }
