--- a/styles.css
+++ b/styles.css
@@ -155,3 +155,12 @@ body {
 .red {
     color: red;
 }
+
+.bust-ele {
+    position: absolute;
+    padding: 1px;
+    border: 1px solid red;
+    right: 3px;
+    bottom: 20px;
+    color: red;
+}
