--- a/styles.css
+++ b/styles.css
@@ -61,9 +61,9 @@ body {
 
 .chip-count {
     position: absolute;
-    color: white;
+    color: gold;
     bottom: 15px; 
-    font-weight: bold;
+    font-weight: 799;
 }
 .card {
     height: 100px;
