--- a/styles.css
+++ b/styles.css
@@ -261,24 +261,27 @@ body {
 
 .login-btns {
     position: absolute;
-    bottom: 35px;
+    bottom: 22px;
     width: 100%;
+    height: 40px;
     display: flex;
     justify-content: center;
     gap: 10px;
+    box-sizing: border-box;
 }
 
 .login-btns button {
-    padding: 8px;
+    border: 1px solid white;
+    height: 100%;
+    width: 120px;
+    padding: 0;
     background: white;
-    font-weight: bold;
     cursor: pointer;
     color: white;
 }
 
 .login-btns button:hover {
     border: 2px solid white;
-    transition: .5s;
 }
 
 #login-btn {
@@ -287,4 +290,6 @@ body {
 
 #create-account-btn {
     background: green;
+    font-size: 13px;
 }
+
