--- a/lobby.css
+++ b/lobby.css
@@ -20,8 +20,8 @@ body {
 }
 
 .user-image {
-    height: 60px;
-    width: 60px;
+    height: 50px;
+    width: 50px;
     background: rgb(73, 73, 73);
     border-radius: 100px;
 }
@@ -97,4 +97,26 @@ body {
     align-items: center;
     justify-content: center;
     color: white;
+    font-size: 18px;
+}
+
+.tables-grid {
+    padding-top: 30px;
+    width: 700px;
+    height: 1500px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(320px);
+
+
+    justify-items: center;
+    align-items: flex-start;
+}
+
+.table {
+    height: 320px;
+    width: 320px;
+    border: 2px solid white;
+    border-radius: 5px;
 }
