--- a/lobby.css
+++ b/lobby.css
@@ -106,12 +106,10 @@ body {
     height: 1500px;
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 320px 320px;
     grid-template-rows: repeat(320px);
-
-
-    justify-items: center;
-    align-items: flex-start;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .table {
@@ -119,4 +117,64 @@ body {
     width: 320px;
     border: 2px solid white;
     border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.seat-grid {
+    height: 150px;
+    width: 150px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+
+
+}
+
+
+.lobby-seat {
+    background: black;
+    border-radius: 100px;
+}
+
+.white {
+    border: 5px solid rgb(80, 80, 80);
+}
+
+.table-info {
+    color: white;
+    
+}
+
+.table-facts {
+    display: flex;
+    position: absolute;
+    top: 10px;
+    width: 100%;
+    height: 20px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px 0 10px;
+}
+
+.table-stakes {
+    top: 10px;
+    right: 10px;
+}
+
+.table-coin {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+}
+
+.coin-icon {
+    height: 25px;
+    width: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
