--- a/lobby.css
+++ b/lobby.css
@@ -64,14 +64,18 @@ body {
     padding: 4px 0 4px 0;
 }
 
-.lobby-buttons button {
-    width: 90%;
-    height: 42px;
+.lobby-btn {
+    width: 100px;
+    height: 40px;
     background: rgb(73, 73, 73);
     color: white;
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
 }
 
 .lobby-user-name {
@@ -98,6 +102,7 @@ body {
     justify-content: center;
     color: white;
     font-size: 18px;
+
 }
 
 .tables-grid {
@@ -115,7 +120,7 @@ body {
 .table {
     height: 320px;
     width: 320px;
-    border: 2px solid white;
+    border: 2px solid grey;
     border-radius: 5px;
     display: flex;
     align-items: center;
@@ -194,3 +199,22 @@ body {
     cursor: pointer;
 }
 
+.tables-header-strip-left {
+    display: flex;
+    position: absolute;
+    left: 15px;
+    width: 130px;
+    justify-content: space-between;
+}
+
+.home-button {
+    background: grey;
+    border-radius: 3px;
+    height: 20px;
+    width: 50px;
+    font-size: 17px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
