--- a/lobby.css
+++ b/lobby.css
@@ -218,3 +218,30 @@ body {
     justify-content: center;
     cursor: pointer;
 }
+
+a { 
+    text-decoration: none;
+    color: white;
+}
+
+
+
+.top-third {
+    height: 25%;
+}
+
+.middle-third {
+    height: 69%;
+}
+
+.bottom-third {
+    height: 6%;
+    background: rgb(48, 48, 48);
+}
+
+.sidebar {
+    height: 100%;
+    width: 220px;
+    background: black;    
+}
+
