finished creating all account page views and linked to nav

--- a/lobby.css
+++ b/lobby.css
@@ -261,6 +261,10 @@ a {
     cursor: pointer;
 }
 
+.sidebar-ele:active {
+    background: rgb(36, 36, 36);
+}
+
 .sidebar-ele:hover {
     background-color: rgb(36, 36, 36);
 }
