--- a/lobby.css
+++ b/lobby.css
@@ -253,7 +253,7 @@ a {
 
 .sidebar-ele {
     border-bottom: 1px solid rgb(61, 61, 61);
-    height: 45px;
+    height: 48px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -261,7 +261,7 @@ a {
     cursor: pointer;
 }
 
-.sidebar-ele:active {
+.sidebar-ele {
     background: rgb(36, 36, 36);
 }
 
@@ -345,7 +345,7 @@ a {
 }
 
 .table-row input {
-    height: 70%;
+    height: 67%;
     width: 100%;
     margin-left: 14px;
 }
