--- a/styles.css
+++ b/styles.css
@@ -291,11 +291,12 @@ body {
 .create-account-btn {
     background: green;
     font-size: 13px;
+    cursor: pointer;
 }
 
 .create-account-form {
     display: flex;
-    background: rgb(56, 56, 56);
+    background-color: rgb(71, 71, 71);
     height: 380px;
     width: 470px;
     border-radius: 13px;
@@ -306,6 +307,7 @@ body {
 .create-account-popup {
     position: absolute;
     z-index: 11;
+
 }
 
 .table-row {
@@ -337,6 +339,43 @@ body {
 }
 
 .input-fields input {
-    width: 90%;
+    width: 100%;
     height: 30px;
+    margin-left: 5px;
+}
+
+.create-account-popup-title {
+    color: white;
+    position: absolute;
+    margin: auto;
+    width: 100%;
+    text-align: center;
+    top: 30px;
+    font-size: 22px;
+}
+
+.create-account-popup-submit-button-row {
+    position: absolute;
+    height: 50px;
+    width: 100%;
+    padding: 0;
+  
+    cursor: pointer;
+    color: white;
+    bottom: 25px;
+    margin: auto;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    gap: 4px;
+}
+
+.popup-button {
+    background: rgb(104, 104, 104);
+    height: 30px;
+    width: 90px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
