added login functionality with userauthentication

--- a/styles.css
+++ b/styles.css
@@ -280,19 +280,21 @@ body {
     color: white;
 }
 
-.login-btns button:hover {
-    border: 2px solid white;
-}
-
 #login-btn {
     background: blue;
 }
 
 .create-account-btn {
     background: green;
-    font-size: 13px;
+    border: 1px solid white;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    padding: 0 20px 0 20px;  
     cursor: pointer;
 }
+
+
 
 .create-account-form {
     display: flex;
